tests/paczka1/fuzzy1/45057212.err
Error in line 10: FgCnxkw S666 33,7
Error in line 12: A99 S105 80,2
Error in line 26: Vkg6o2H A409 33,6
Error in line 31: Vkg6o2H A75 29,8
Error in line 20: iuJ44 A75 53,7
